typescript/checker/tests/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            19,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral2.ts:1:5
  |
1 | new Foo[1];
  |     ^^^

